--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ form {
 #inputSection {
     display: flex;
     align-content: center;
+    margin-bottom: 50px;
 }
 
 form {
@@ -49,4 +50,9 @@ footer {
 
 #mealInput {
     margin: auto;
+}
+
+.meals-output-list {
+    margin-top: 30px;
+
 }
