--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 :root {
-    --main-color: #1c2e47;
+    --main-color: #03060a;
 }
 
 html {
-    margin: 30px;
+    margin: 20px 30px 30px 30px;
 }
 
 * {
-    font-family: verdana;
+    font-family: Helvetica;
     background-color: var(--main-color);
     color: #b2b3b5;
 }
@@ -16,20 +16,13 @@ html {
 header {
     display: flex;
     margin-bottom: 50px;
+    border-bottom: 1px solid #b2b3b5;
+    padding-bottom: 10px;
 }
 
 h1 {
     margin: auto;
-}
-
-form {
-    margin-bottom: 20px;
-    margin: auto;
-}
-
-#generate-btn {
-    width: 170px;
-    height: 40px;
+    color: orange;
 }
  
 #inputSection {
@@ -37,7 +30,6 @@ form {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-bottom: 50px;
 }
 
 table {
@@ -64,13 +56,31 @@ footer {
 
 #numberButtons {
     margin: auto;
+    align-items: center;
+    font-size: 20px;
+    border: none;
+    padding: 25px;
+}
+
+legend {
+    color: orange;
 }
 
 .numBtn {
     height: 40px;
     width: 80px;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: bold;
+    border-radius: 10px;
+    border: 1px solid orange;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin: 10px;
+    color: orange;
+}
+
+.numBtn:active {
+    color: var(--main-color);
+    background-color: orange;
 }
 
 td {
@@ -87,9 +97,9 @@ td {
     padding-bottom: 8px;
 }
 
-/* .container {
-    display: flex;
-} */
+table {
+    border: 1px solid red;
+}
 
 /* The sidebar menu */
 .sidebar {
