--- a/styles.css
+++ b/styles.css
@@ -58,10 +58,6 @@ footer {
     margin-bottom: 50px;
 }
 
-#mealInput {
-    margin: auto;
-}
-
 #numberButtons {
     margin: auto;
     align-items: center;
@@ -87,6 +83,11 @@ legend {
 }
 
 .numBtn:active {
+    color: var(--main-color);
+    background-color: var(--accent-color);
+}
+
+.num-btn:hover {
     color: var(--main-color);
     background-color: var(--accent-color);
 }
@@ -187,18 +188,21 @@ main {
     gap: 14px;
     padding: 14px;
     border-radius: 14px;
-    background: rgba(0, 0, 0, 0.551);
+    background: rgba(0, 0, 0, 0.793);
 }
 
 .mealItem p {
     flex: 1;
     background: rgba(0, 0, 0, 0);
+    margin-left: 25px;
+    margin-right: 25px;
 }
 
 .actionsContainer {
     display: flex;
     align-items: center;
     gap: 14px;
+    background-color: rgba(0, 0, 0, 0);
 }
 
 .actionsContainer button {
@@ -212,7 +216,63 @@ main {
     opacity: 0.7;
 }
 
+#inputContainer {
+    display: grid;
+    justify-content: center;
+    padding: 30px;
+}
 
+.inputBtns {
+    display: grid;
+    margin: 10px;
+    padding: 10px;
+}
+
+.inputBtns > input {
+    width: 50vw;
+    max-height: 5px;
+    padding: 20px;
+    border-radius: 10px;
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+
+#add-btn {
+    margin: 0 auto;
+    height: 40px;
+    width: 50vw;
+    font-size: 14px;
+    font-weight: bold;
+    border-radius: 10px;
+    border: 1px solid var(--accent-color);
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: var(--main-color);
+    background-color: var(--accent-color);
+}
+
+#add-btn:active {
+    color: var(--accent-color);
+    background-color: var(--main-color);
+}
+
+#add-btn:hover {
+    color: var(--accent-color);
+    background-color: var(--main-color);
+}
+
+.fa-solid {
+    background-color: rgba(0, 0, 0, 0);
+}
+
+#addIcon {
+    position: sticky;
+    float: right;
+    top: 40px;
+}
+
+#addIcon:hover {
+    cursor: pointer;
+}
   
   /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
