--- a/styles.css
+++ b/styles.css
@@ -274,34 +274,14 @@ main {
 }
 
 
-#close-input {
+#cross-btn {
     position: relative;
     z-index: 1;
-}
-
-#close-input {
     cursor: pointer;
-}
-
-#close-line1 {
-    position: absolute;
-    height: 30px;
-    width: 8px;
-    border-radius: 5px;
-    background-color: #4b4b4b;
-    transform: rotate(45deg);
-    right: -5px;
-}
-
-#close-line2 {
-    position: absolute;
-    height: 8px;
-    width: 30px;
-    border-radius: 5px;
-    background-color: #4b4b4b;
-    transform: rotate(45deg);
-    right: -15px;
-    margin-top: 10px;
+    margin-top: 20px;
+    margin-left: 500px;
+    font-size: 36px;
+    text-decoration: none;
 }
 
 #add-icon {
