--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 :root {
     --main-color: #03060a;
     --accent-color: rgb(254, 176, 32);
+    --offset: rgb(11, 13, 34);
 }
 
 html {
@@ -219,21 +220,26 @@ main {
 
 #inputContainer {
     position: fixed;
-    bottom: 50px;
+    bottom: 0;
     width: 100vw;
     display: grid;
     display: none;
-    justify-content: center; 
+    justify-content: center;
+    border: solid white 1px;
+    left: 0;
+    padding-bottom: 30px;
+    background-color: var(--offset);
 }
 
-.inputBtns {
+.textInput {
     position: relative;
     display: grid;
     margin: 10px;
     padding: 10px;
+    background-color: var(--offset);
 }
 
-.inputBtns > input {
+.textInput > input {
     position: relative;
     width: 50vw;
     max-height: 5px;
@@ -243,11 +249,15 @@ main {
     margin-bottom: 20px;
 }
 
+#new-meal-btns {
+    background-color: var(--offset);
+    display: flex;
+}
+
 #add-btn {
-    position: relative;
     margin: 0 auto;
     height: 40px;
-    width: 50vw;
+    width: 30%;
     font-size: 14px;
     font-weight: bold;
     border-radius: 10px;
@@ -262,24 +272,38 @@ main {
     background-color: var(--main-color);
 }
 
-#add-btn:hover {
+#cancel-btn {
+    margin: 0 auto;
+    height: 40px;
+    width: 30%;
+    font-size: 14px;
+    font-weight: bold;
+    border-radius: 10px;
+    border: 1px solid var(--accent-color);
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: var(--accent-color);
     background-color: var(--main-color);
 }
+
+#cancel-btn:active {
+    color: var(--main-color);
+    background-color: var(--accent-color);
+}
+
 
 .fa-solid {
     background-color: rgba(0, 0, 0, 0);
 }
 
-
 #cross-btn {
-    position: relative;
+    position: absolute;
+    right: 75px;
     z-index: 1;
     cursor: pointer;
-    margin-top: 20px;
-    margin-left: 500px;
+    top: 10px;
     font-size: 36px;
     text-decoration: none;
+    background-color: var(--offset);
 }
 
 #add-icon {
