--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,7 @@
     --main-color: #03060a;
     --accent-color: rgb(254, 176, 32);
     --offset: rgb(11, 13, 34);
-}
-
-html {
-    padding: 20px 30px 30px 30px;
+    --menu: rgba(0, 0, 0, 0.626);
 }
 
 * {
@@ -14,11 +11,21 @@ html {
     color: #b2b3b5;
 }
 
+html {
+    margin: 0;
+    padding: 0;
+  }  
+
+body {
+    margin: 0;
+    padding: 50px;
+}
+
 header {
     display: flex;
     margin-bottom: 50px;
     border-bottom: 1px solid #b2b3b5;
-    padding-bottom: 10px;
+    padding-bottom: 25px;
 }
 
 h1 {
@@ -187,6 +194,7 @@ main {
 .mealItem {
     display: flex;
     align-items: center;
+    margin-inline: 50px;
     gap: 14px;
     padding: 14px;
     border-radius: 14px;
@@ -196,8 +204,7 @@ main {
 .mealItem p {
     flex: 1;
     background: rgba(0, 0, 0, 0);
-    margin-left: 25px;
-    margin-right: 25px;
+    margin-inline: 25px;
 }
 
 .actionsContainer {
@@ -227,8 +234,9 @@ main {
     justify-content: center;
     border: solid white 1px;
     left: 0;
+    padding-top: 20px;
     padding-bottom: 30px;
-    background-color: var(--offset);
+    background-color: var(--menu);
 }
 
 .textInput {
@@ -236,7 +244,7 @@ main {
     display: grid;
     margin: 10px;
     padding: 10px;
-    background-color: var(--offset);
+    background-color: var(--menu);
 }
 
 .textInput > input {
@@ -250,7 +258,7 @@ main {
 }
 
 #new-meal-btns {
-    background-color: var(--offset);
+    background-color: var(--menu);
     display: flex;
 }
 
@@ -351,13 +359,16 @@ main {
     background-color: var(--main-color);
 }
   
-  /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
 .sidebar {padding-top: 15px;}
 .sidebar a {font-size: 18px;}
-
-  }
+}
 
 @media screen and (max-width: 500px) {
 #numberButtons {width: 250px;}
 }
+
+@media screen and (min-width: 1200px) {
+    .mealItem {margin-inline: 200px;}
+    }
