--- a/styles.css
+++ b/styles.css
@@ -14,11 +14,14 @@
 html {
     margin: 0;
     padding: 0;
+    min-height: 100%;
+    position: relative;
   }  
 
 body {
     margin: 0;
     padding: 50px;
+    height: 100%;
 }
 
 header {
@@ -128,36 +131,37 @@ td {
     margin-left: 10px;
 }
 
-/* The sidebar menu */
 .sidebar {
     height: 100%;
-    width: 0; /* Change this with JavaScript */
-    position: absolute; /* Stay in place */
-    z-index: 1; /* Stay on top */
+    width: 0;
+    position: absolute;
+    z-index: 1;
     top: 0;
+    bottom: 0;
     right: 0;
     background-color: var(--main-color);
     overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 60px;
     transition: 0.3s;
     text-wrap: nowrap;
   }
   
-  /* The sidebar links */
-  .sidebar a {
-    padding: 8px 8px 8px 32px;
+  .sidebar a{
+    padding: 25px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
     color: #818181;
     display: block;
     transition: 0.3s;
   }
-  
+
+  #sidebar-links {
+    padding-top: 70px;
+  }
+
   .sidebar a:hover {
     color: #7e8d9b;
   }
   
-  /* Position and style the close button (top right corner) */
   .sidebar .closebtn {
     position: absolute;
     top: 0;
@@ -196,15 +200,19 @@ main {
     align-items: center;
     margin-inline: 50px;
     gap: 14px;
-    padding: 14px;
+    padding: 15px 30px 15px 30px;
     border-radius: 14px;
     background: rgba(0, 0, 0, 0.793);
+    opacity: 0;
 }
 
 .mealItem p {
     flex: 1;
     background: rgba(0, 0, 0, 0);
-    margin-inline: 25px;
+}
+
+#meal-item-name {
+    font-size: 20px;
 }
 
 .actionsContainer {
@@ -370,5 +378,5 @@ main {
 }
 
 @media screen and (min-width: 1200px) {
-    .mealItem {margin-inline: 200px;}
+    .mealItem {margin-inline: 500px; }
     }
