--- a/styles.css
+++ b/styles.css
@@ -240,9 +240,10 @@ main {
 
 #inputContainer {
     position: fixed;
+    margin: auto;
     bottom: 0;
     width: 100vw;
-    display: grid;
+    display: flex;
     display: none;
     justify-content: center;
     border-radius: 15px;
@@ -263,6 +264,7 @@ main {
 
 .textInput > input {
     position: relative;
+    margin: 0 auto;
     width: 50vw;
     max-height: 5px;
     padding: 20px;
