--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 :root {
-    --main-color: #03060a;
-    --accent-color: rgb(254, 176, 32);
+    --main-color: #0f1724;
+    --accent-color: rgb(117, 198, 252);
     --offset: rgb(11, 13, 34);
     --menu: rgba(0, 0, 0, 0.626);
     --transparent: rgba(0, 0, 0, 0);
@@ -15,14 +15,14 @@
 html {
     margin: 0;
     padding: 0;
-    min-height: 100%;
+    height: 100%;
     position: relative;
   }  
 
 body {
     margin: 0;
     padding: 20px 50px 50px 50px;
-    height: 100%;
+    min-height: 100%;
 }
 
 header {
@@ -39,6 +39,10 @@ h1 {
     color: var(--accent-color);
     letter-spacing: 0.15rem;
     text-align: center;
+}
+
+#indexH2 {
+    color: rgb(214, 214, 214);
 }
 
 #navbar {
@@ -141,7 +145,7 @@ td {
 }
 
 .mealText {
-    color: orange;
+    color: var(--accent-color);
     font-weight: 600;
     padding-bottom: 8px;
     opacity: 0;
@@ -202,14 +206,12 @@ main {
 
 .mealItem {
     display: flex;
-    /* display: none; */
     align-items: center;
     margin-inline: 100px;
     gap: 14px;
     padding: 15px 30px 15px 30px;
     border-radius: 14px;
     background: rgba(0, 0, 0, 0.793);
-    /* opacity: 0; */
 }
 
 .mealItem p {
@@ -250,7 +252,7 @@ main {
     justify-content: center;
     border-radius: 15px;
     left: 0;
-    padding-top: 20px;
+    padding-top: 10px;
     padding-bottom: 30px;
     background-color: var(--menu);
     /* transition: margin-top .5s; */
@@ -347,7 +349,7 @@ main {
     scale: 1.1;
 }
 
-#orange-circle {
+#open-meal-adder {
     position: relative;
     height: 50px;
     width: 50px;
@@ -387,10 +389,6 @@ main {
     transition: transform 0.3s ease-in;
 }
 
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-    .sidebar a {font-size: 18px;}
-}
 
 @media screen and (max-height: 450px) {
     .sidebar a {font-size: 18px;}
@@ -399,10 +397,13 @@ main {
 @media screen and (max-width: 500px) {
     h1 {font-size: 20px;}
     #openbtn {margin-right: -50px;}
-    #openbtn {margin-top: -50px;}
+    #openbtn {margin-top: -10px;}
     .mealItem {margin-inline: 10px;}
     .mealItem {display: block;}
-    .mealItem button {float: right}
+    .mealItem button {float: right;}
+    #add-icon {right: 15px;}
+    #add-icon {bottom: 15px;}
+    .textInput > input {width: 75vw;}
 }
 
 @media screen and (min-width: 1600px) {
