--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     --main-color: #0f1724;
     --accent-color: rgb(117, 198, 252);
     --offset: rgb(11, 13, 34);
-    --menu: rgba(0, 0, 0, 0.626);
+    --menu: rgba(0, 0, 0, 0.778);
     --transparent: rgba(0, 0, 0, 0);
 }
 
@@ -245,13 +245,13 @@ main {
 #inputContainer {
     position: fixed;
     margin: auto;
+    left: 0;
+    right: 0;
     bottom: 0;
     width: 100vw;
     display: flex;
     display: none;
     justify-content: center;
-    border-radius: 15px;
-    left: 0;
     padding-top: 10px;
     padding-bottom: 30px;
     background-color: var(--menu);
@@ -383,6 +383,14 @@ main {
     margin-top: 21.5px;
     border-radius: 5px;
     background-color: var(--main-color);
+}
+
+.draggable {
+    cursor: pointer;
+}
+
+.draggable.dragging {
+    opacity: .5;
 }
 
 .rotate {
