--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ header {
 }
 
 h1 {
+    opacity: 0;
     height: 80px;
     line-height: 80px;
     color: var(--accent-color);
@@ -42,6 +43,7 @@ h1 {
 }
 
 #indexH2 {
+    opacity: 0;
     color: rgb(214, 214, 214);
 }
 
@@ -118,6 +120,7 @@ legend {
 }
 
 .numBtn {
+    opacity: 0;
     height: 40px;
     width: 80px;
     font-size: 14px;
@@ -396,7 +399,7 @@ main {
     background-color: var(--main-color);
 }
 
-.draggable {
+#dragHandle {
     cursor: pointer;
 }
 
