--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ header {
     position: relative;
     justify-content: center;
     margin-bottom: 50px;
-    border-bottom: 1px solid #b2b3b5;
+    border-bottom: 2px solid #b2b3b5;
 }
 
 h1 {
@@ -49,7 +49,7 @@ h1 {
     position: absolute;
     transition: margin-left .5s;
     height: 100%;
-    right: 15px;
+    left: 15px;
     margin-right: 15px;
     padding-top: 30px;
     box-sizing: border-box;
@@ -57,6 +57,7 @@ h1 {
 
 #openbtn {
     font-size: 40px;
+    line-height: 70px;
     cursor: pointer;
     color: #b2b3b5;
     border: none;
@@ -80,15 +81,11 @@ legend {
 #inputSection {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 30px;
+    margin-bottom: 2rem;
 }
 
 table {
-    margin: auto;
     z-index: -1;
-    /* Prevents table lines interfering with other elements on page */
 }
 
 #meals-number {
@@ -105,27 +102,18 @@ footer {
     margin-bottom: 50px;
 }
 
-#numberButtons {
-    margin: auto;
-    align-items: center;
-    font-size: 20px;
-    border: none;
-    padding: 25px;
-}
-
 legend {
     color: var(--accent-color);
 }
 
-.numBtn {
-    height: 40px;
-    width: 80px;
+#gen-btn {
+    height: 3em;
+    width: 8em;
     font-size: 14px;
     font-weight: bold;
     border-radius: 10px;
     border: 1px solid var(--accent-color);
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin: 10px;
     color: var(--accent-color);
 }
 
@@ -140,7 +128,6 @@ legend {
 }
 
 #meals-table {
-    /* position: relative; */
     margin-bottom: -30px;
 }
 
@@ -161,6 +148,12 @@ td {
     opacity: 0;
 }
 
+#shoppingList {
+    margin-top: 20px;
+    opacity: 0;
+    font-size: 20px;
+}
+
 #char {
     margin-left: 10px;
 }
@@ -172,7 +165,7 @@ td {
     z-index: 1;
     top: 0;
     bottom: 0;
-    right: 0;
+    left: 0;
     background-color: var(--main-color);
     overflow-x: hidden; /* Disable horizontal scroll */
     transition: 0.3s;
@@ -214,10 +207,12 @@ main {
     /* gap: 14px; */
 }
 
+#index-main-content {
+    margin-inline: 100px;
+}
 .mealItem {
     display: flex;
     align-items: center;
-    margin-inline: 100px;
     margin-bottom: 14px;
     gap: 14px;
     padding: 15px 30px 15px 30px;
@@ -421,11 +416,12 @@ main {
     .sidebar a {font-size: 18px;}
 }
 
-@media screen and (max-width: 500px) {
-    h1 {font-size: 20px;}
+@media screen and (max-width: 600px) {
+    h1 {font-size: 24px;}
     #openbtn {margin-right: -50px;}
     #openbtn {margin-top: -10px;}
-    .mealItem {margin-inline: 10px;}
+    #index-main-content {margin-inline: 10px;}
+    #openbtn {font-size: 30px;}
     .mealItem {display: block;}
     .mealItem button {float: right;}
     #add-icon {right: 15px;}
