--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ html {
 
 body {
     margin: 0;
-    padding: 0px 50px 50px 50px;
+    padding: 20px 50px 50px 50px;
     min-height: 100%;
 }
 
@@ -39,38 +39,35 @@ header {
     display: flex;
     position: relative;
     justify-content: center;
-    /* padding-bottom: 10px; */
-    margin-bottom: 30px;
+    padding-bottom: 10px;
+    margin-bottom: 50px;
     border-bottom: 2px solid #b2b3b5;
-    height: 6rem;
 }
 
 h1 {
     opacity: 0;
-    font-size: 2em;
+    height: 80px;
+    line-height: 80px;
+    font-size: 2.5em;
     color: var(--accent-color);
+    letter-spacing: 0.15rem;
     text-align: center;
     font-family: "Outfit", Arial;
 }
 
-#generateBtn {
-    background-color: #253042;
-    font-size: 1.2em;
-    color: var(--accent-color);
-    margin: auto 0;
+#index-page-title {
+    background-color: #171f2ca4;
     border: solid var(--accent-color) 2px;
     padding-inline: 25px;
     border-radius: 10px;
-    line-height: 40px;
-    height: auto;
     opacity: 1;
 }
 
-#generateBtn:hover {
+#index-page-title:hover {
     cursor: pointer;
 }
 
-#generateBtn:active {
+#index-page-title:active {
     color: var(--light-grey);
     background-color: var(--accent-color);
 }
@@ -90,13 +87,12 @@ h1 {
     box-sizing: border-box;
   }
 
-#hamburger {
-    font-size: 2em;
-    margin-top: -10px;
+#openbtn {
+    font-size: 3em;
     cursor: pointer;
     color: #b2b3b5;
     border: none;
-    background-color: var(--transparent);
+    background-color: #75c6fc00;
 }
 
 #index-main-content {
@@ -106,16 +102,18 @@ h1 {
     align-items: center;
 }
 
-#generateBtnContainer {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 20px;
+#generate-btn {
+    height: 3em;
+    width: 15em;
+    margin-bottom: 2em;
+    font-size: 1em;
+    border-radius: 10px;
 }
 
 #dragHandle {
     font-size: 15px;
     cursor: pointer;
-    color: #b2b3b5;
+    color: #b2b3b5b7;
     border: none;
     background-color: #75c6fc00;
     margin-left: -10px;
@@ -179,17 +177,17 @@ legend {
 
 .mealText {
     color: var(--light-grey);
-    font-weight: 700;
+    font-weight: 600;
     padding-bottom: 8px;
     opacity: 0;
-    font-size: 1.5em;
+    font-size: 2em;
     letter-spacing: 2.5px;
 }
 
 .ingredientsText {
     padding-bottom: 30px;
     opacity: 0;
-    font-size: 1.5em;
+    font-size: 1.3em;
 }
 
 #shoppingList {
@@ -230,7 +228,7 @@ legend {
   }
 
   #mySidebar a:hover {
-    color: #B2B3B5;
+    color: #7e8d9b;
   }
   
   #mySidebar .closebtn {
@@ -267,18 +265,18 @@ main {
 .mealItem p {
     flex: 1;
     background: rgba(0, 0, 0, 0);
-    font-size: 1.1em;
+
 }
 
 #meal-item-name {
-    font-weight: 700;
+    font-size: 20px;
 }
 
 .actionsContainer {
     display: flex;
     align-items: center;
     gap: 14px;
-    background-color: var(--transparent);
+    background-color: rgba(0, 0, 0, 0);
 }
 
 .actionsContainer button {
@@ -286,6 +284,10 @@ main {
     border: none;
     background: transparent;
     cursor: pointer;
+}
+
+.actionsContainer button:hover {
+    opacity: 0.7;
 }
 
 #inputContainer {
@@ -301,19 +303,14 @@ main {
     padding-top: 10px;
     padding-bottom: 30px;
     background-color: var(--menu);
-}
-
-#meal-input-title, #meal-input-ingredients {
-    background-color: var(--transparent);
-    font-weight: 700;
-    color: var(--accent-color);
-    margin: 10px 0 15px 0;
+    /* transition: margin-top .5s; */
 }
 
 .textInput {
     position: relative;
     display: grid;
-    justify-content: center;
+    margin: 10px;
+    padding: 10px;
     background-color: var(--transparent);
 }
 
@@ -325,8 +322,7 @@ main {
     padding: 20px;
     border-radius: 10px;
     font-size: 16px;
-    margin-bottom: 15px;
-    border: 2px solid var(--accent-color)
+    margin-bottom: 20px;
 }
 
 #new-meal-btns {
@@ -336,14 +332,13 @@ main {
 
 #add-btn {
     margin: 0 auto;
-    margin-top: 10px;
     height: 40px;
     width: 30%;
     font-size: 14px;
-    font-weight: 700;
+    font-weight: bold;
     border-radius: 10px;
     border: 1px solid var(--accent-color);
-    font-family:'Outfit', 'Arial';
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: var(--main-color);
     background-color: var(--accent-color);
 }
@@ -353,19 +348,27 @@ main {
     background-color: var(--main-color);
 }
 
+#cancel-btn {
+    margin: 0 auto;
+    height: 40px;
+    width: 30%;
+    font-size: 14px;
+    font-weight: bold;
+    border-radius: 10px;
+    border: 1px solid var(--accent-color);
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: var(--accent-color);
+    background-color: var(--main-color);
+}
+
+#cancel-btn:active {
+    color: var(--main-color);
+    background-color: var(--accent-color);
+}
+
 
 .fa-solid {
-    background-color: var(--transparent);
-    color: var(--light-grey);
-    font-size: 1.1em;
-}
-
-.fa-pen-to-square:hover {
-    color: var(--accent-color);
-}
-
-.fa-trash:hover {
-    color: rgb(216, 53, 53);
+    background-color: rgba(0, 0, 0, 0);
 }
 
 #cross-btn {
@@ -383,7 +386,7 @@ main {
     position: fixed;
     bottom: 50px;
     right: 50px;
-    background-color: var(--transparent);
+    background-color: #03060a00;
 }
 
 #add-icon:hover {
@@ -417,6 +420,7 @@ main {
     margin-top: 5px;
     border-radius: 5px;
     background-color: var(--main-color);
+
 }
 
 #horizontal-strip {
@@ -434,15 +438,15 @@ main {
 }
 
 .draggable.dragging {
-    opacity: 1;
+    opacity: .5;
 }
 
 .draggables-container {
-    gap: 14px;
+    gap: 14px; /* Ensure a 14px gap below each container */
 }
 
 .draggables-container:last-child {
-    margin-bottom: 0;
+    margin-bottom: 0; /* Remove margin from the last item to avoid extra spacing */
 }
 
 .rotate {
@@ -460,20 +464,17 @@ main {
 }
 
 @media screen and (max-width: 750px) {
-    header {
-        height: 5rem;
-    }
-    
     h1 {
-        font-size: 1.8em;
+        font-size: 24px;
         height: auto;
         width: auto;
         line-height: 35px;
     }
 
-    #hamburger {
+    #openbtn {
         margin-left: -50px;
         margin-top: -14px;
+        font-size: 36px;
     }
 
     #index-main-content {margin-inline: 10px;}
@@ -485,8 +486,6 @@ main {
         right: 50px;
         bottom: 50px;
     }
-
-    #mealInput, #ingredientsInput {width: 20em;}
 
     .textInput > input {width: 75vw;}
 }
@@ -515,7 +514,7 @@ main {
 @media screen and (min-width: 750px) {
     #meals-table {
         display: table;
-        width: 60%;
+        width: 40%;
         margin: auto;
     }
 
