--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,6 @@ header {
     display: flex;
     position: relative;
     justify-content: center;
-    /* padding-bottom: 10px; */
     margin-bottom: 30px;
     border-bottom: 2px solid #b2b3b5;
     height: 6rem;
@@ -47,6 +46,7 @@ header {
 
 h1 {
     opacity: 0;
+    margin-top: 27.5px;
     font-size: 2em;
     color: var(--accent-color);
     text-align: center;
@@ -109,7 +109,7 @@ h1 {
 #generateBtnContainer {
     display: flex;
     justify-content: center;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
 }
 
 #dragHandle {
@@ -136,7 +136,7 @@ legend {
     display: block;
     margin: auto;
     min-height: 30em;
-    width: 90%;
+    width: 40%;
     opacity: 1;
     margin-bottom: -30px;
 }
@@ -497,7 +497,7 @@ main {
 @media screen and (min-width: 1400px) {
     #meals-table {
         display: table;
-        width: 60%;
+        /* width: 30%; */
         margin: auto;
     }
 
@@ -511,10 +511,9 @@ main {
     }
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 1400px) {
     #meals-table {
         display: table;
-        width: 70%;
         margin: auto;
     }
 
