--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@400;700&family=Outfit:wght@300;400;600&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"');
+
+
 :root {
-    --main-color: #0f1724;
-    --accent-color: #75c6fc;
-    --offset: rgb(11, 13, 34);
-    --menu: rgba(0, 0, 0, 0.778);
+    --primary-color: #f5f6f7;
+    --accent-color: #5a7d7c;
+    --accent-translucent: #5a7d7c2a;
+    --offset: #e2e6ea;
+    --menu: rgba(255, 255, 255, 0.95);
     --transparent: rgba(0, 0, 0, 0);
-    --light-grey: #b2b3b5;
+    --light-grey: #2e2e2e;
+    --button-active: #3b5554;
 }
 
 .unselectable {
@@ -17,8 +24,7 @@
 }
 
 * {
-    font-family: "Outfit", Arial;
-    background-color: var(--main-color);
+    font-family: "Kalam", "Outfit", Arial;
     color: var(--light-grey);
 }
 
@@ -27,11 +33,11 @@ html {
     padding: 0;
     height: 100%;
     position: relative;
-  }  
+}  
 
 body {
     margin: 0;
-    padding: 0px 50px 50px 50px;
+    padding: 50px;
     min-height: 100%;
 }
 
@@ -50,29 +56,28 @@ h1 {
     font-size: 2em;
     color: var(--accent-color);
     text-align: center;
-    font-family: "Outfit", Arial;
 }
 
-#generateBtn {
-    background-color: #253042;
-    font-size: 1.2em;
-    color: var(--accent-color);
+.button-neutral {
+    background-color: var(--accent-color);
+    font-size: 1.5em;
+    color: var(--primary-color);
     margin: auto 0;
     border: solid var(--accent-color) 2px;
     padding-inline: 25px;
     border-radius: 10px;
-    line-height: 40px;
+    line-height: 3em;
     height: auto;
     opacity: 1;
-}
 
-#generateBtn:hover {
-    cursor: pointer;
-}
+    &:hover {
+        cursor: pointer;
+    }
 
-#generateBtn:active {
-    color: var(--light-grey);
-    background-color: var(--accent-color);
+    &:active {
+        color: var(--button-active);
+        background-color: var(--primary-color);
+    }
 }
 
 #indexH2 {
@@ -90,11 +95,11 @@ h1 {
     box-sizing: border-box;
   }
 
-#hamburger {
+.hamburger {
     font-size: 2em;
     margin-top: -10px;
     cursor: pointer;
-    color: #b2b3b5;
+    color: var(--accent-color);
     border: none;
     background-color: var(--transparent);
 }
@@ -107,10 +112,19 @@ h1 {
     margin-inline: 100px;
 }
 
-#generateBtnContainer {
+.button-tray {
+    position: fixed;
     display: flex;
+    align-items: center;
     justify-content: center;
-    margin-bottom: 25px;
+    background: var(--accent-translucent);
+    border-color: 2px solid var(--accent-color);
+    padding: 4em 0;
+    width: 100vw;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    backdrop-filter: blur(4px);
 }
 
 #dragHandle {
@@ -198,11 +212,7 @@ legend {
     font-size: 20px;
 }
 
-#char {
-    margin-left: 10px;
-}
-
-#mySidebar {
+.sidebar {
     height: 100%;
     width: 0;
     position: absolute;
@@ -210,21 +220,23 @@ legend {
     top: 0;
     bottom: 0;
     left: 0;
-    background-color: var(--main-color);
+    background-color: var(--primary-color);
     overflow-x: hidden; /* Disable horizontal scroll */
     transition: 0.3s;
     text-wrap: nowrap;
+    padding-top: 70px;
+
+    a {
+        padding: 25px 8px 8px 32px;
+        text-decoration: none;
+        font-size: 25px;
+        color: #818181;
+        display: block;
+        transition: 0.3s;
+      }
   }
   
-  #mySidebar a{
-    padding: 25px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    transition: 0.3s;
-  }
-
+  #mySidebar 
   #sidebar-links {
     padding-top: 70px;
   }
@@ -253,18 +265,24 @@ main {
 
 .mealItem {
     display: flex;
+    flex-direction: row;
     align-items: center;
     margin-bottom: 14px;
     gap: 14px;
     padding: 15px 30px 15px 30px;
     border-radius: 14px;
     background: rgba(0, 0, 0, 0.793);
+
+    td {
+        max-width: 30rem;
+    }
 }
 
 .meal-item-text {
     flex: 1;
     background: rgba(0, 0, 0, 0);
     font-size: 1.1em;
+    text-wrap: wrap;
 }
 
 #meal-item-name {
@@ -342,13 +360,13 @@ main {
     border-radius: 10px;
     border: 1px solid var(--accent-color);
     font-family:'Outfit', 'Arial';
-    color: var(--main-color);
+    color: var(--primary-color);
     background-color: var(--accent-color);
 }
 
 #add-btn:active {
     color: var(--accent-color);
-    background-color: var(--main-color);
+    background-color: var(--primary-color);
 }
 
 
@@ -414,7 +432,7 @@ main {
     margin-left: 21.5px;
     margin-top: 5px;
     border-radius: 5px;
-    background-color: var(--main-color);
+    background-color: var(--primary-color);
 }
 
 #horizontal-strip {
@@ -424,7 +442,7 @@ main {
     margin-left: 5px;
     margin-top: 21.5px;
     border-radius: 5px;
-    background-color: var(--main-color);
+    background-color: var(--primary-color);
 }
 
 #dragHandle {
@@ -453,74 +471,3 @@ main {
 }
 
 
-@media screen and (max-height: 450px) {
-    .sidebar a {font-size: 18px;}
-
-    h1 {
-        font-size: 1.4em;
-        height: auto;
-        width: auto;
-        line-height: 20px;
-    }
-
-    #hamburger {
-        margin-left: -60px;
-        margin-top: -12px;
-    }
-}
-
-@media screen and (max-width: 750px) {
-    header {
-        height: 5rem;
-    }
-    
-    h1 {
-        font-size: 1.8em;
-        height: auto;
-        width: auto;
-        line-height: 25px;
-    }
-
-    #hamburger {
-        margin-left: -50px;
-        margin-top: -14px;
-    }
-
-    #index-main-content {margin-inline: 10px;}
-    
-    .mealItem {display: block;}
-    .mealItem button {float: right;}
-
-    #add-icon {
-        right: 30px;
-        bottom: 50px;
-    }
-
-    #mealInput, #ingredientsInput {width: 20em;}
-
-    .textInput > input {width: 75vw;}
-}
-
-@media screen and (min-width: 1600px) {
-    .mealItem {margin-inline: 400px; }
-}
-
-@media screen and (min-width: 1400px) {
-    #index-main-content {
-        margin-inline: 5px;
-    }
-    
-    #meals-table {
-        display: table;
-        margin: auto;
-    }
-
-    tr {
-        display: table-row;
-    }
-
-    td {
-        display: table-cell;
-        vertical-align: top;
-    }
-}
