--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,8 @@
     --offset: #e2e6ea;
     --menu: rgba(255, 255, 255, 0.95);
     --transparent: rgba(0, 0, 0, 0);
-    --light-grey: #2e2e2e;
+    --primary-text-color: #2e2e2e;
+    --secondary-text-color: #5a7d7c;
     --button-active: #3b5554;
 }
 
@@ -46,6 +47,7 @@ header {
     display: flex;
     position: relative;
     justify-content: center;
+    align-items: center;
     margin-bottom: 30px;
     border-bottom: 2px solid #b2b3b5;
     height: 6rem;
@@ -259,22 +261,21 @@ legend {
         padding: 25px 8px 8px 32px;
         text-decoration: none;
         font-size: 25px;
-        color: #818181;
+        color: var(--primary-text-color);
         display: block;
         transition: 0.3s;
       }
   }
   
-  #mySidebar 
-  #sidebar-links {
+  .sidebar .sidebar-links {
     padding-top: 70px;
   }
 
-  #mySidebar a:hover {
-    color: #B2B3B5;
+  .sidebar a:hover {
+    color: var(--secondary-text-color);
   }
   
-  #mySidebar .closebtn {
+  .sidebar .closebtn {
     position: absolute;
     top: 0;
     right: 25px;
